--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -154,7 +154,7 @@
     <table class="table table-bordered">
       <thead class="thead-info">
         <p class="bg-info text-dark"></p>
-        <tr class="bg-primary">
+        <tr class="bg-info">
           <th>Add New Case Wizard</th>
         </tr>
       </thead>
@@ -230,7 +230,7 @@
       <app-menu></app-menu>
     </div>
   </body>
-  <div class="footer bg-primary">
+  <div class="footer bg-info">
     <p>&nbsp; &nbsp;OptiAM AR|Andromeda Systems Incorporated</p>
   </div>
 </html>
