--- a/src/app/loanalert/loanalert.component.html
+++ b/src/app/loanalert/loanalert.component.html
@@ -6,7 +6,7 @@
       Case/Loan Alert
       <br />
       <br />
-      <button (click)="onSubmit()" type="button" class="btn btn-primary">
+      <button (click)="onSubmit()" type="button" class="btn btn-info">
         Add Loan Alert
       </button>
       <br />
@@ -14,7 +14,7 @@
       <div class="table-responsive">
         <table class="table table-bordered table-sm">
           <thead>
-            <tr class="bg-primary text-light">
+            <tr class="bg-info text-light">
               <th>Row No</th>
               <th>Delete</th>
               <th>Edit</th>
@@ -66,7 +66,7 @@
         <button (click)="onBack()" type="button" class="btn btn-secondary btn">
           Back</button
         >&nbsp;
-        <button (click)="onNext()" type="button" class="btn btn-primary">
+        <button (click)="onNext()" type="button" class="btn btn-info">
           Next
         </button>
       </div>
