--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -7,7 +7,7 @@
       Case/Loan Notes
       <br />
       <br />
-      <button (click)="onSubmit()" type="button" class="btn btn-primary">
+      <button (click)="onSubmit()" type="button" class="btn btn-info">
         Add Notes
       </button>
       <br />
@@ -15,7 +15,7 @@
       <div class="table-responsive">
         <table style="text-align: center;" class="table table-bordered">
           <thead>
-            <tr class="bg-primary text-light">
+            <tr class="bg-info text-light">
               <th>Row No</th>
               <th>Delete</th>
               <th>Edit</th>
@@ -54,7 +54,7 @@
           >
             Back</button
           >&nbsp;
-          <button (click)="onNext()" type="button" class="btn btn-primary">
+          <button (click)="onNext()" type="button" class="btn btn-info">
             Next
           </button>
         </div>
