--- a/src/app/payplan/payplan.component.html
+++ b/src/app/payplan/payplan.component.html
@@ -6,7 +6,7 @@
       Case/Loan Pay Plan
       <br />
       <br />
-      <button (click)="onSubmit()" type="button" class="btn btn-primary">
+      <button (click)="onSubmit()" type="button" class="btn btn-info">
         Add Pay Plan
       </button>
       <br />
@@ -15,7 +15,7 @@
         <div class="table-responsive">
           <table class="table table-bordered table-sm text-sm">
             <thead>
-              <tr class="bg-primary text-light">
+              <tr class="bg-info text-light">
                 <th>Row No</th>
                 <th>Delete</th>
                 <th>Edit</th>
@@ -94,7 +94,7 @@
           >
             Back</button
           >&nbsp;
-          <button (click)="onNext()" type="button" class="btn btn-primary">
+          <button (click)="onNext()" type="button" class="btn btn-info">
             Next
           </button>
         </div>
