--- a/src/app/alertform/alertform.component.html
+++ b/src/app/alertform/alertform.component.html
@@ -7,7 +7,7 @@
         <form (ngSubmit)="onSubmit(f)" #f="ngForm">
           <div class="text-left">
             <br />
-            <button type="submit" class="btn btn-primary">Save</button>&nbsp;
+            <button type="submit" class="btn btn-info">Save</button>&nbsp;
             <button
               (click)="onCancel()"
               type="button"
@@ -20,7 +20,7 @@
             <div class="col-auto">
               <table class="table table-bordered">
                 <thead class="thead-info">
-                  <tr class="bg-primary text-light">
+                  <tr class="bg-info text-light">
                     <th>Loan Alert Information</th>
                   </tr>
                 </thead>
