--- a/src/app/loanform/loanform.component.html
+++ b/src/app/loanform/loanform.component.html
@@ -8,7 +8,7 @@
           <div class="text-leftt">
             <br />
 
-            <button type="submit" class="btn btn-primary">Save</button>&nbsp;
+            <button type="submit" class="btn btn-info">Save</button>&nbsp;
             <button
               (click)="onCancel()"
               type="button"
@@ -21,7 +21,7 @@
           <div class="container-fluid">
             <table class="table table-bordered">
               <thead class="thead-info">
-                <tr class="bg-primary text-light">
+                <tr class="bg-info text-light">
                   <th>Loan Vendor</th>
                 </tr>
               </thead>
