--- a/src/app/payedit/payedit.component.html
+++ b/src/app/payedit/payedit.component.html
@@ -5,7 +5,7 @@
 
 <form (ngSubmit)="onSubmit(f)" #f="ngForm">
   <div class="text-leftt">
-    <button type="submit" class="btn btn-primary">Save</button>&nbsp;
+    <button type="submit" class="btn btn-info">Save</button>&nbsp;
     <button (click)="onCancel()" type="button" class="btn btn-secondary">
       Cancel
     </button>
@@ -16,7 +16,7 @@
     <div class="col-auto">
       <table class="table table-bordered">
         <thead class="thead-info">
-          <tr class="bg-primary text-light">
+          <tr class="bg-info text-light">
             <th>Loan Payplan Information</th>
           </tr>
         </thead>
