--- a/src/app/loanalert/loanalert.component.html
+++ b/src/app/loanalert/loanalert.component.html
@@ -35,12 +35,12 @@
               <td>{{ loanalert.rowno }}</td>
 
               <td>
-                <button (click)="deleteLoanalert(loanalert.id)">
+                <button class="btn btn-danger" (click)="deleteLoanalert(loanalert.id)">
                   <i class="fas fa-trash-alt"></i>
                 </button>
               </td>
               <td>
-                <button (click)="editLoanalert(loanalert.id)">
+                <button class="btn btn-success" (click)="editLoanalert(loanalert.id)">
                   <i class="fas fa-pen"></i>
                 </button>
               </td>
