--- a/src/app/loanvendor/loanvendor.component.html
+++ b/src/app/loanvendor/loanvendor.component.html
@@ -27,12 +27,12 @@
               <td>{{ loanvendor.rowno }}</td>
 
               <td>
-                <button (click)="deleteLoanvendor(loanvendor.id)">
+                <button class="btn btn-danger" (click)="deleteLoanvendor(loanvendor.id)">
                   <i class="fas fa-trash-alt"></i>
                 </button>
               </td>
               <td>
-                <button (click)="editLoanvendor(loanvendor.id)">
+                <button class="btn btn-success" (click)="editLoanvendor(loanvendor.id)">
                   <i class="fas fa-pen"></i>
                 </button>
               </td>
