--- a/src/app/loanvendor/loanvendor.component.html
+++ b/src/app/loanvendor/loanvendor.component.html
@@ -7,7 +7,7 @@
 
       <div class="text-left">
         <br />
-        <button (click)="onSubmit()" type="button" class="btn btn-info">
+        <button (click)="onSubmit()" type="button" style="background-color: rgb(12,79,141);" class="btn btn-info">
           Add Loan Vendor
         </button>
       </div>
@@ -15,7 +15,7 @@
       <div class="table-responsive">
         <table style="text-align: center;" class="table table-bordered">
           <thead>
-            <tr class="bg-info text-light">
+            <tr style="background-color: rgb(12,79,141); color: white;">
               <th>Delete</th>
               <th>Edit</th>
               <th>Vendor Company Name</th>
@@ -44,7 +44,7 @@
         <button (click)="onBack()" type="button" class="btn btn-secondary btn">
           Back</button
         >&nbsp;
-        <button (click)="onNext()" type="button" class="btn btn-info">
+        <button (click)="onNext()" type="button" style="background-color: rgb(12,79,141);" class="btn btn-info">
           Next
         </button>
       </div>
