--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -7,7 +7,7 @@
       Case/Loan Notes
       <br />
       <br />
-      <button (click)="onSubmit()" type="button" class="btn btn-info">
+      <button (click)="onSubmit()" type="button" style="background-color: rgb(12,79,141); color: white;" class="btn btn-info">
         Add Notes
       </button>
       <br />
@@ -15,7 +15,7 @@
       <div class="table-responsive">
         <table style="text-align: center;" class="table table-bordered">
           <thead>
-            <tr class="bg-info text-light">
+            <tr style="background-color: rgb(12,79,141); color: white;">
               <th>Delete</th>
               <th>Edit</th>
               <th>Note Text</th>
@@ -52,7 +52,7 @@
           >
             Back</button
           >&nbsp;
-          <button (click)="onNext()" type="button" class="btn btn-info">
+          <button (click)="onNext()" style="background-color: rgb(12,79,141); color: white;" type="button" class="btn btn-info">
             Next
           </button>
         </div>
