--- a/src/app/payplan/payplan.component.html
+++ b/src/app/payplan/payplan.component.html
@@ -6,7 +6,7 @@
       Case/Loan Pay Plan
       <br />
       <br />
-      <button (click)="onSubmit()" type="button" class="btn btn-info">
+      <button (click)="onSubmit()" type="button" style="background-color: rgb(12,79,141); color: white;" class="btn btn-info">
         Add Pay Plan
       </button>
       <br />
@@ -15,7 +15,7 @@
         <div class="table-responsive">
           <table class="table table-bordered table-sm text-sm">
             <thead>
-              <tr class="bg-info text-light">
+              <tr style="background-color: rgb(12,79,141); color: white;">
                 <th>Delete</th>
                 <th>Edit</th>
                 <th>Pay Plan Type</th>
@@ -92,7 +92,7 @@
           >
             Back</button
           >&nbsp;
-          <button (click)="onNext()" type="button" class="btn btn-info">
+          <button (click)="onNext()" type="button" style="background-color: rgb(12,79,141); color: white;" class="btn btn-info">
             Next
           </button>
         </div>
