--- a/src/app/alertedit/alertedit.component.html
+++ b/src/app/alertedit/alertedit.component.html
@@ -7,7 +7,7 @@
         <form (ngSubmit)="onSubmit(f)" #f="ngForm">
           <div class="text-left">
             <br />
-            <button type="submit" class="btn btn-info">Save</button>&nbsp;
+            <button type="submit" style="background-color: rgb(12,79,141); color: white;">Save</button>&nbsp;
             <button
               (click)="onCancel()"
               type="button"
@@ -20,7 +20,7 @@
             <div class="col-auto">
               <table class="table table-bordered">
                 <thead class="thead-info">
-                  <tr class="bg-info text-light">
+                  <tr style="background-color: rgb(12,79,141); color: white;" class="bg-info text-light">
                     <th>Loan Alert Information</th>
                   </tr>
                 </thead>
@@ -28,7 +28,7 @@
                   <tr>
                     <td>
                       <div class="container-fluid">
-                        <div class="form-group text-info">
+                        <div style="background-color: rgb(12,79,141); color: white;">
                           <div class="row">
                             <label class="col-sm-3">Alert Type: </label>
                             <div class="col-sm-3">
