--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,22 +3,22 @@
       <tr>
 <th>
 <div class="btn-group">
-  <button type="button" class="btn btn-info">Loan</button>&nbsp;
+  <button type="button" style="background-color: rgb(12,79,141); color: white;" class="btn btn-info">Loan</button>&nbsp;
 </div>
     <div class="btn-group">
-  <button type="button" class="btn btn-info">Borrower/Contact</button>&nbsp;
+  <button type="button" style="background-color: rgb(12,79,141); color: white;" class="btn btn-info">Borrower/Contact</button>&nbsp;
 </div>
         <div class="btn-group">
-  <input type="button" class="btn btn-info" value="Notes" (click)="onSubmit()"/>&nbsp;
+  <input type="button" style="background-color: rgb(12,79,141); color: white;" class="btn btn-info" value="Notes" (click)="onSubmit()"/>&nbsp;
 </div>
 <div class="btn-group">
-  <button  (click)="onVendor()" type="button" class="btn btn-info">Loan Vendor</button>&nbsp;
+  <button  (click)="onVendor()" type="button" style="background-color: rgb(12,79,141); color: white;" class="btn btn-info">Loan Vendor</button>&nbsp;
 </div>
 <div class="btn-group">
-  <input type="button" class="btn btn-info" value="Loan Alert" (click)="onAlert()"/>&nbsp;
+  <input type="button" style="background-color: rgb(12,79,141); color: white;" class="btn btn-info" value="Loan Alert" (click)="onAlert()"/>&nbsp;
 </div>
 <div class="btn-group">
-  <input type="button" class="btn btn-info" value="Loan Pay Plan" (click)="onPay()"/>&nbsp;
+  <input type="button" style="background-color: rgb(12,79,141); color: white;" class="btn btn-info" value="Loan Pay Plan" (click)="onPay()"/>&nbsp;
 </div>
 </th>
 </tr>
