--- a/src/app/notesform/notesform.component.html
+++ b/src/app/notesform/notesform.component.html
@@ -7,7 +7,7 @@
         <form (ngSubmit)="onSubmit(f)" #f="ngForm">
           <div class="text-leftt">
             <br />
-            <button type="submit" class="btn btn-info">Save</button>&nbsp;
+            <button type="submit" class="btn btn-info" style="background-color: rgb(12,79,141); color: white;">Save</button>&nbsp;
             <button
               (click)="onCancel()"
               type="button"
@@ -20,7 +20,7 @@
             <div class="col-auto">
               <table class="table table-bordered">
                 <thead class="thead-info">
-                  <tr class="bg-info text-light">
+                  <tr style="background-color: rgb(12,79,141); color: white;">
                     <th>Notes Information</th>
                   </tr>
                 </thead>
