--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <nav style="width: 100%;font-size: 14px;" class="navbar navbar-expand-sm bg-warning navbar-dark">
+    <nav
+      style="
+        width: 100%;
+        font-size: 14px;
+        background-image: linear-gradient(to right, yellow, orange);
+      "
+      class="navbar navbar-expand-sm bg-warning navbar-dark"
+    >
       <a class="navbar-brand text-info" href="#">OPTIAM HECM</a>
 
       <div class="nav-item dropdown">
@@ -154,7 +161,7 @@
     <table class="table table-bordered">
       <thead class="thead-info">
         <p class="bg-info text-dark"></p>
-        <tr  style="background-color: rgb(12,79,141); color: white;">
+        <tr style="background-color: rgb(12, 79, 141); color: white">
           <th>Add New Case Wizard</th>
         </tr>
       </thead>
@@ -175,15 +182,15 @@
                   </div>
                   <label class="col-sm-1">Case Program:</label>
                   <div class="col-sm-2">
-                    <select class="form-control"
-                      ><option selected>--Select--</option>
+                    <select class="form-control">
+                      <option selected>--Select--</option>
                     </select>
                   </div>
                   <label class="col-sm-1">Case Type:</label>
                   <div class="col-sm-2">
-                    <select class="form-control"
-                      ><option selected>Select a case type</option></select
-                    >
+                    <select class="form-control">
+                      <option selected>Select a case type</option>
+                    </select>
                   </div>
                   <label class="col-sm-1">Case Status:</label>
                   <div class="col-sm-2">
@@ -197,9 +204,9 @@
                 <div class="row">
                   <label class="col-sm-1">ARM Index:</label>
                   <div class="col-sm-2">
-                    <select class="form-control"
-                      ><option selected>Select ARM Index</option></select
-                    >
+                    <select class="form-control">
+                      <option selected>Select ARM Index</option>
+                    </select>
                   </div>
                   <label class="col-sm-1">Orig Prin Amt:</label>
                   <div class="col-sm-2">
@@ -211,9 +218,9 @@
                   </div>
                   <label class="col-sm-1">ARM Period:</label>
                   <div class="col-sm-2">
-                    <select class="form-control"
-                      ><option selected>Select ARM Period</option></select
-                    >
+                    <select class="form-control">
+                      <option selected>Select ARM Period</option>
+                    </select>
                   </div>
                 </div>
               </div>
@@ -230,7 +237,7 @@
       <app-menu></app-menu>
     </div>
   </body>
-  <div style="background-color: rgb(12,79,141); color: white; height: 40px;" >
+  <div style="background-color: rgb(12, 79, 141); color: white; height: 40px">
     <p>&nbsp; &nbsp;OptiAM AR|Andromeda Systems Incorporated</p>
   </div>
 </html>
